--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "external/sokol"]
 	path = external/sokol
 	url = https://github.com/floooh/sokol.git
+[submodule "external/sokol-samples"]
+	path = external/sokol-samples
+	url = https://github.com/floooh/sokol-samples.git
+[submodule "external/sokol-tools-bin"]
+	path = external/sokol-tools-bin
+	url = https://github.com/floooh/sokol-tools-bin.git
