--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,10 +43,11 @@ android {
 }
 
 dependencies {
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+//    implementation libs.material.v1110 // Use latest version
+//    implementation libs.appcompat
+//    implementation libs.material
+//    implementation libs.constraintlayout
+//    testImplementation libs.junit
+//    androidTestImplementation libs.ext.junit
+//    androidTestImplementation libs.espresso.core
 }
