--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.myapplication">
 
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <!-- Required for NativeActivity -->
+    <uses-feature android:name="android.hardware.opengles.a" android:required="true" />
+
+    <!-- Set the minimum and target SDK versions
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="34" />
+    -->
+
+    <!-- Required permissions (if needed)
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    -->
+
+    <!--android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" -->
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
-        android:hasCode="false"
-        tools:targetApi="31">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        android:hasCode="false"> <!-- No Java/Kotlin Code -->
 
-        <activity
-            android:name="android.app.NativeActivity"
-            android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+        <activity android:name="android.app.NativeActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="landscape"
-            >
+            tools:ignore="DiscouragedApi">
+
+            <!-- Specifies the native shared library to load -->
+            <meta-data android:name="android.app.lib_name"
+                android:value="TrySokol" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="TrySokol" />
         </activity>
-    </application>
 
+    </application>
 </manifest>
